[gd_scene load_steps=26 format=2]

[ext_resource path="res://Player/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://YouCanJump.png" type="Texture" id=2]
[ext_resource path="res://Enemy/Enemy.tscn" type="PackedScene" id=3]
[ext_resource path="res://Enemy/Enemy2.tscn" type="PackedScene" id=4]
[ext_resource path="res://Level/Tutorial.gd" type="Script" id=5]
[ext_resource path="res://Audio/mondie.wav" type="AudioStream" id=6]
[ext_resource path="res://Door/DoorBackToHome.tscn" type="PackedScene" id=7]
[ext_resource path="res://Audio/win3.wav" type="AudioStream" id=8]
[ext_resource path="res://Pirate Bomb/Sprites/7-Objects/12-Other Objects/Chair.png" type="Texture" id=9]
[ext_resource path="res://DecorateAnimation/Light.tscn" type="PackedScene" id=16]
[ext_resource path="res://Tileset/Tileset.tres" type="TileSet" id=18]
[ext_resource path="res://Pirate Bomb/Sprites/7-Objects/12-Other Objects/Barrel.png" type="Texture" id=29]
[ext_resource path="res://Pirate Bomb/Sprites/7-Objects/2-Door/1-Closed/1.png" type="Texture" id=33]
[ext_resource path="res://DecorateAnimation/Window.tscn" type="PackedScene" id=35]
[ext_resource path="res://DecorateAnimation/BigChain.tscn" type="PackedScene" id=38]
[ext_resource path="res://Pirate Bomb/Sprites/7-Objects/12-Other Objects/Green Bottle.png" type="Texture" id=43]
[ext_resource path="res://Pirate Bomb/Sprites/7-Objects/12-Other Objects/Red Bottle.png" type="Texture" id=46]
[ext_resource path="res://Pirate Bomb/Sprites/7-Objects/12-Other Objects/Table.png" type="Texture" id=47]
[ext_resource path="res://Pirate Bomb/Sprites/7-Objects/12-Other Objects/Blue Bottle.png" type="Texture" id=48]
[ext_resource path="res://Pirate Bomb/Sprites/7-Objects/12-Other Objects/Skull.png" type="Texture" id=53]
[ext_resource path="res://press.png" type="Texture" id=63]
[ext_resource path="res://findbomb.png" type="Texture" id=64]
[ext_resource path="res://DecorateAnimation/SmallChain.tscn" type="PackedScene" id=65]
[ext_resource path="res://Bomb/Bomb.tscn" type="PackedScene" id=66]
[ext_resource path="res://Audio/beep.wav" type="AudioStream" id=70]

[node name="Tutorial" type="Node"]
script = ExtResource( 5 )

[node name="TileMapBg" type="TileMap" parent="."]
tile_set = ExtResource( 18 )
format = 1
tile_data = PoolIntArray( -327686, 7, 0, -327685, 7, 0, -327684, 7, 0, -327683, 7, 0, -327682, 7, 0, -327681, 7, 0, -393216, 7, 0, -393215, 7, 0, -393214, 7, 0, -393213, 7, 0, -393212, 7, 0, -393211, 7, 0, -393210, 7, 0, -393209, 7, 0, -393208, 7, 0, -393207, 7, 0, -393206, 7, 0, -393205, 7, 0, -393204, 7, 0, -393203, 7, 0, -393202, 7, 0, -393201, 7, 0, -393200, 7, 0, -393199, 7, 0, -393198, 7, 0, -393197, 7, 0, -393196, 7, 0, -393195, 7, 0, -262150, 7, 0, -262149, 7, 0, -262148, 7, 0, -262147, 7, 0, -262146, 7, 0, -262145, 7, 0, -327680, 7, 0, -327679, 7, 0, -327678, 7, 0, -327677, 7, 0, -327676, 7, 0, -327675, 7, 0, -327674, 7, 0, -327673, 7, 0, -327672, 7, 0, -327671, 7, 0, -327670, 7, 0, -327669, 7, 0, -327668, 7, 0, -327667, 7, 0, -327666, 7, 0, -327665, 7, 0, -327664, 7, 0, -327663, 7, 0, -327662, 7, 0, -327661, 7, 0, -327660, 7, 0, -327659, 7, 0, -196614, 7, 0, -196613, 7, 0, -196612, 7, 0, -196611, 7, 0, -196610, 7, 0, -196609, 7, 0, -262144, 7, 0, -262143, 7, 0, -262142, 7, 0, -262141, 7, 0, -262140, 7, 0, -262139, 7, 0, -262138, 7, 0, -262137, 7, 0, -262136, 7, 0, -262135, 7, 0, -262134, 7, 0, -262133, 7, 0, -262132, 7, 0, -262131, 7, 0, -262130, 7, 0, -262129, 7, 0, -262128, 7, 0, -262127, 7, 0, -262126, 7, 0, -262125, 7, 0, -262124, 7, 0, -262123, 7, 0, -131078, 7, 0, -131077, 7, 0, -131076, 7, 0, -131075, 7, 0, -131074, 7, 0, -131073, 7, 0, -196608, 7, 0, -196607, 7, 0, -196606, 7, 0, -196605, 7, 0, -196604, 7, 0, -196603, 7, 0, -196602, 7, 0, -196601, 7, 0, -196600, 7, 0, -196599, 7, 0, -196598, 7, 0, -196597, 7, 0, -196596, 7, 0, -196595, 7, 0, -196594, 7, 0, -196593, 7, 0, -196592, 7, 0, -196591, 7, 0, -196590, 7, 0, -196589, 7, 0, -196588, 7, 0, -196587, 7, 0, -65542, 7, 0, -65541, 7, 0, -65540, 7, 0, -65539, 7, 0, -65538, 7, 0, -65537, 7, 0, -131072, 7, 0, -131071, 7, 0, -131070, 7, 0, -131069, 7, 0, -131068, 7, 0, -131067, 7, 0, -131066, 7, 0, -131065, 7, 0, -131064, 7, 0, -131063, 7, 0, -131062, 7, 0, -131061, 7, 0, -131060, 7, 0, -131059, 7, 0, -131058, 7, 0, -131057, 7, 0, -131056, 7, 0, -131055, 7, 0, -131054, 7, 0, -131053, 7, 0, -131052, 7, 0, -131051, 7, 0, -6, 7, 0, -5, 7, 0, -4, 7, 0, -3, 7, 0, -2, 7, 0, -65519, 7, 0, -65518, 7, 0, -65517, 7, 0, -65516, 7, 0, -65515, 7, 0, 65530, 7, 0, 65531, 7, 0, 65532, 7, 0, 65533, 7, 0, 65534, 7, 0, 0, 3, 0, 1, 4, 0, 2, 4, 0, 3, 4, 0, 4, 4, 0, 5, 4, 0, 6, 4, 0, 7, 4, 0, 8, 4, 0, 9, 4, 0, 10, 4, 0, 11, 4, 0, 12, 4, 0, 13, 4, 0, 14, 4, 0, 15, 5, 0, 17, 7, 0, 18, 7, 0, 19, 7, 0, 20, 7, 0, 21, 7, 0, 131066, 7, 0, 131067, 7, 0, 131068, 7, 0, 131069, 7, 0, 131070, 7, 0, 65536, 9, 0, 65537, 10, 0, 65538, 10, 0, 65539, 10, 0, 65540, 10, 0, 65541, 10, 0, 65542, 10, 0, 65543, 10, 0, 65544, 10, 0, 65545, 10, 0, 65546, 10, 0, 65547, 10, 0, 65548, 10, 0, 65549, 10, 0, 65550, 10, 0, 65551, 11, 0, 65553, 7, 0, 65554, 7, 0, 65555, 7, 0, 65556, 7, 0, 65557, 7, 0, 196602, 7, 0, 196603, 7, 0, 196604, 7, 0, 196605, 7, 0, 196606, 7, 0, 131072, 9, 0, 131073, 10, 0, 131074, 10, 0, 131075, 10, 0, 131076, 10, 0, 131077, 10, 0, 131078, 10, 0, 131079, 10, 0, 131080, 10, 0, 131081, 10, 0, 131082, 10, 0, 131083, 10, 0, 131084, 10, 0, 131085, 10, 0, 131086, 10, 0, 131087, 11, 0, 131089, 7, 0, 131090, 7, 0, 131091, 7, 0, 131092, 7, 0, 131093, 7, 0, 262138, 7, 0, 262139, 7, 0, 262140, 7, 0, 262141, 7, 0, 262142, 7, 0, 196608, 9, 0, 196609, 10, 0, 196610, 10, 0, 196611, 10, 0, 196612, 10, 0, 196613, 10, 0, 196614, 10, 0, 196615, 10, 0, 196616, 10, 0, 196617, 10, 0, 196618, 10, 0, 196619, 10, 0, 196620, 10, 0, 196621, 10, 0, 196622, 10, 0, 196623, 11, 0, 196625, 7, 0, 196626, 7, 0, 196627, 7, 0, 196628, 7, 0, 196629, 7, 0, 327674, 7, 0, 327675, 7, 0, 327676, 7, 0, 327677, 7, 0, 327678, 7, 0, 262144, 9, 0, 262145, 10, 0, 262146, 10, 0, 262147, 10, 0, 262148, 10, 0, 262149, 10, 0, 262150, 10, 0, 262151, 10, 0, 262152, 10, 0, 262153, 10, 0, 262154, 10, 0, 262155, 10, 0, 262156, 10, 0, 262157, 10, 0, 262158, 10, 0, 262159, 11, 0, 262161, 7, 0, 262162, 7, 0, 262163, 7, 0, 262164, 7, 0, 262165, 7, 0, 393210, 7, 0, 393211, 7, 0, 393212, 7, 0, 393213, 7, 0, 393214, 7, 0, 327680, 9, 0, 327681, 10, 0, 327682, 10, 0, 327683, 3, 0, 327684, 4, 0, 327685, 4, 0, 327686, 4, 0, 327687, 4, 0, 327688, 4, 0, 327689, 4, 0, 327690, 4, 0, 327691, 4, 0, 327692, 4, 0, 327693, 4, 0, 327694, 4, 0, 327695, 4, 0, 327696, 4, 0, 327697, 4, 0, 327698, 4, 0, 327699, 4, 0, 327700, 4, 0, 327701, 4, 0, 327702, 4, 0, 327703, 4, 0, 327704, 5, 0, 458746, 7, 0, 458747, 7, 0, 458748, 7, 0, 458749, 7, 0, 458750, 7, 0, 393216, 9, 0, 393217, 10, 0, 393218, 10, 0, 393219, 9, 0, 393220, 10, 0, 393221, 4, 0, 393222, 10, 0, 393223, 10, 0, 393224, 10, 0, 393225, 10, 0, 393226, 10, 0, 393227, 10, 0, 393228, 10, 0, 393229, 10, 0, 393230, 10, 0, 393231, 10, 0, 393232, 10, 0, 393233, 10, 0, 393234, 10, 0, 393235, 10, 0, 393236, 10, 0, 393237, 10, 0, 393238, 10, 0, 393239, 10, 0, 393240, 11, 0, 524282, 7, 0, 524283, 7, 0, 524284, 7, 0, 524285, 7, 0, 524286, 7, 0, 458752, 15, 0, 458753, 16, 0, 458754, 16, 0, 458755, 15, 0, 458756, 16, 0, 458757, 16, 0, 458758, 16, 0, 458759, 16, 0, 458760, 16, 0, 458761, 16, 0, 458762, 16, 0, 458763, 16, 0, 458764, 16, 0, 458765, 16, 0, 458766, 16, 0, 458767, 16, 0, 458768, 16, 0, 458769, 16, 0, 458770, 16, 0, 458771, 16, 0, 458772, 16, 0, 458773, 16, 0, 458774, 16, 0, 458775, 16, 0, 458776, 17, 0, 589818, 7, 0, 589819, 7, 0, 589820, 7, 0, 589821, 7, 0, 589822, 7, 0, 524305, 7, 0, 524306, 7, 0, 524307, 7, 0, 524308, 7, 0, 524309, 7, 0, 655354, 7, 0, 655355, 7, 0, 655356, 7, 0, 655357, 7, 0, 655358, 7, 0, 655359, 7, 0, 589824, 7, 0, 589825, 7, 0, 589826, 7, 0, 589827, 7, 0, 589828, 7, 0, 589829, 7, 0, 589830, 7, 0, 589831, 7, 0, 589832, 7, 0, 589833, 7, 0, 589834, 7, 0, 589835, 7, 0, 589836, 7, 0, 589837, 7, 0, 589838, 7, 0, 589839, 7, 0, 589840, 7, 0, 589841, 7, 0, 589842, 7, 0, 589843, 7, 0, 589844, 7, 0, 589845, 7, 0, 720890, 7, 0, 720891, 7, 0, 720892, 7, 0, 720893, 7, 0, 720894, 7, 0, 720895, 7, 0, 655360, 7, 0, 655361, 7, 0, 655362, 7, 0, 655363, 7, 0, 655364, 7, 0, 655365, 7, 0, 655366, 7, 0, 655367, 7, 0, 655368, 7, 0, 655369, 7, 0, 655370, 7, 0, 655371, 7, 0, 655372, 7, 0, 655373, 7, 0, 655374, 7, 0, 655375, 7, 0, 655376, 7, 0, 655377, 7, 0, 655378, 7, 0, 655379, 7, 0, 655380, 7, 0, 655381, 7, 0, 786426, 7, 0, 786427, 7, 0, 786428, 7, 0, 786429, 7, 0, 786430, 7, 0, 786431, 7, 0, 720896, 7, 0, 720897, 7, 0, 720898, 7, 0, 720899, 7, 0, 720900, 7, 0, 720901, 7, 0, 720902, 7, 0, 720903, 7, 0, 720904, 7, 0, 720905, 7, 0, 720906, 7, 0, 720907, 7, 0, 720908, 7, 0, 720909, 7, 0, 720910, 7, 0, 720911, 7, 0, 720912, 7, 0, 720913, 7, 0, 720914, 7, 0, 720915, 7, 0, 720916, 7, 0, 720917, 7, 0, 851962, 7, 0, 851963, 7, 0, 851964, 7, 0, 851965, 7, 0, 851966, 7, 0, 851967, 7, 0, 786432, 7, 0, 786433, 7, 0, 786434, 7, 0, 786435, 7, 0, 786436, 7, 0, 786437, 7, 0, 786438, 7, 0, 786439, 7, 0, 786440, 7, 0, 786441, 7, 0, 786442, 7, 0, 786443, 7, 0, 786444, 7, 0, 786445, 7, 0, 786446, 7, 0, 786447, 7, 0, 786448, 7, 0, 786449, 7, 0, 786450, 7, 0, 786451, 7, 0, 786452, 7, 0, 786453, 7, 0 )

[node name="DecorateAnimation" type="Node" parent="."]

[node name="Candle" parent="DecorateAnimation" instance=ExtResource( 16 )]
position = Vector2( 361, 444 )

[node name="Candle2" parent="DecorateAnimation" instance=ExtResource( 16 )]
position = Vector2( 504, 448 )

[node name="Window" parent="DecorateAnimation" instance=ExtResource( 35 )]
position = Vector2( 288, 371 )

[node name="Window2" parent="DecorateAnimation" instance=ExtResource( 35 )]
position = Vector2( 608, 370 )

[node name="Window3" parent="DecorateAnimation" instance=ExtResource( 35 )]
position = Vector2( 928, 371 )

[node name="Window4" parent="DecorateAnimation" instance=ExtResource( 35 )]
position = Vector2( 1248, 368 )

[node name="BigChain" parent="DecorateAnimation" instance=ExtResource( 38 )]
position = Vector2( 218, 368 )

[node name="BigChain2" parent="DecorateAnimation" instance=ExtResource( 38 )]
position = Vector2( 875, 368 )

[node name="BigChain3" parent="DecorateAnimation" instance=ExtResource( 38 )]
position = Vector2( 1200, 370 )

[node name="BigChain4" parent="DecorateAnimation" instance=ExtResource( 38 )]
position = Vector2( 1460, 370 )

[node name="SmallChain" parent="DecorateAnimation" instance=ExtResource( 65 )]
position = Vector2( 555, 348 )

[node name="SmallChain2" parent="DecorateAnimation" instance=ExtResource( 65 )]
position = Vector2( 987, 344 )

[node name="SmallChain3" parent="DecorateAnimation" instance=ExtResource( 65 )]
position = Vector2( 1578, 344 )

[node name="Decorate" type="Node" parent="."]

[node name="Table" type="Sprite" parent="Decorate"]
position = Vector2( 312, 496 )
texture = ExtResource( 47 )

[node name="Table2" type="Sprite" parent="Decorate"]
position = Vector2( 1194, 496 )
texture = ExtResource( 47 )

[node name="Table3" type="Sprite" parent="Decorate"]
position = Vector2( 1274, 496 )
texture = ExtResource( 47 )

[node name="Chair" type="Sprite" parent="Decorate"]
position = Vector2( 246, 484 )
texture = ExtResource( 9 )

[node name="Chair2" type="Sprite" parent="Decorate"]
position = Vector2( 898, 484 )
texture = ExtResource( 9 )

[node name="Barrel" type="Sprite" parent="Decorate"]
position = Vector2( 591, 490 )
texture = ExtResource( 29 )

[node name="Barrel2" type="Sprite" parent="Decorate"]
position = Vector2( 601, 446 )
texture = ExtResource( 29 )
flip_h = true

[node name="Barrel3" type="Sprite" parent="Decorate"]
position = Vector2( 542, 491 )
rotation = 1.5708
texture = ExtResource( 29 )

[node name="Barrel4" type="Sprite" parent="Decorate"]
position = Vector2( 1482, 491 )
rotation = 1.5708
texture = ExtResource( 29 )

[node name="Barrel5" type="Sprite" parent="Decorate"]
position = Vector2( 1530, 490 )
texture = ExtResource( 29 )

[node name="Barrel6" type="Sprite" parent="Decorate"]
position = Vector2( 1541, 446 )
texture = ExtResource( 29 )
flip_h = true

[node name="Barrel7" type="Sprite" parent="Decorate"]
position = Vector2( 946, 490 )
texture = ExtResource( 29 )
flip_h = true

[node name="GreenBottle" type="Sprite" parent="Decorate"]
position = Vector2( 1506, 372 )
texture = ExtResource( 43 )

[node name="GreenBottle2" type="Sprite" parent="Decorate"]
position = Vector2( 299, 474 )
rotation = -1.57159
texture = ExtResource( 43 )

[node name="GreenBottle3" type="Sprite" parent="Decorate"]
position = Vector2( 986, 505 )
rotation = -1.57159
texture = ExtResource( 43 )
flip_v = true

[node name="GreenBottle4" type="Sprite" parent="Decorate"]
position = Vector2( 1254, 468 )
texture = ExtResource( 43 )

[node name="GreenBottle5" type="Sprite" parent="Decorate"]
position = Vector2( 1451, 499 )
texture = ExtResource( 43 )
flip_h = true

[node name="BlueBottle" type="Sprite" parent="Decorate"]
position = Vector2( 323, 470 )
texture = ExtResource( 48 )

[node name="BlueBottle2" type="Sprite" parent="Decorate"]
position = Vector2( 1235, 470 )
texture = ExtResource( 48 )

[node name="BlueBottle3" type="Sprite" parent="Decorate"]
position = Vector2( 1566, 500 )
texture = ExtResource( 48 )
flip_h = true

[node name="RedBottle" type="Sprite" parent="Decorate"]
position = Vector2( 366, 496 )
texture = ExtResource( 46 )

[node name="RedBottle3" type="Sprite" parent="Decorate"]
position = Vector2( 944, 453 )
texture = ExtResource( 46 )

[node name="RedBottle2" type="Sprite" parent="Decorate"]
position = Vector2( 1390, 441 )
rotation = 1.57765
texture = ExtResource( 46 )

[node name="Skull" type="Sprite" parent="Decorate"]
position = Vector2( 630, 504 )
texture = ExtResource( 53 )
flip_h = true

[node name="Skull2" type="Sprite" parent="Decorate"]
position = Vector2( 1185, 473 )
texture = ExtResource( 53 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 18 )
format = 1
tile_data = PoolIntArray( -393194, 7, 0, -393193, 7, 0, -393192, 7, 0, -393191, 7, 0, -393190, 7, 0, -393189, 7, 0, -393188, 7, 0, -393187, 7, 0, -393186, 7, 0, -393185, 7, 0, -327658, 7, 0, -327657, 7, 0, -327656, 7, 0, -327655, 7, 0, -327654, 7, 0, -327653, 7, 0, -327652, 7, 0, -327651, 7, 0, -327650, 7, 0, -327649, 7, 0, -262122, 7, 0, -262121, 7, 0, -262120, 7, 0, -262119, 7, 0, -262118, 7, 0, -262117, 7, 0, -262116, 7, 0, -262115, 7, 0, -262114, 7, 0, -262113, 7, 0, -196593, 7, 0, -196586, 7, 0, -196585, 7, 0, -196584, 7, 0, -196583, 7, 0, -196582, 7, 0, -196581, 7, 0, -196580, 7, 0, -196579, 7, 0, -196578, 7, 0, -196577, 7, 0, -131058, 7, 0, -131057, 7, 0, -131051, 7, 0, -131050, 7, 0, -131049, 7, 0, -131048, 7, 0, -131047, 7, 0, -131046, 7, 0, -131045, 7, 0, -131044, 7, 0, -131043, 7, 0, -131042, 7, 0, -131041, 7, 0, -1, 7, 0, -65536, 7, 0, -65535, 7, 0, -65534, 7, 0, -65533, 7, 0, -65532, 7, 0, -65531, 7, 0, -65530, 7, 0, -65529, 7, 0, -65528, 7, 0, -65527, 7, 0, -65526, 7, 0, -65525, 7, 0, -65524, 7, 0, -65523, 7, 0, -65522, 7, 0, -65521, 7, 0, -65520, 7, 0, -65515, 7, 0, -65514, 7, 0, -65513, 7, 0, -65512, 7, 0, -65511, 7, 0, -65510, 7, 0, -65509, 7, 0, -65508, 7, 0, -65507, 7, 0, -65506, 7, 0, -65505, 7, 0, 65535, 7, 0, 0, 7, 0, 1, 7, 0, 2, 7, 0, 3, 7, 0, 4, 7, 0, 5, 7, 0, 6, 7, 0, 7, 7, 0, 8, 7, 0, 9, 7, 0, 10, 7, 0, 11, 7, 0, 12, 7, 0, 13, 7, 0, 14, 7, 0, 15, 7, 0, 16, 7, 0, 21, 7, 0, 22, 7, 0, 23, 7, 0, 24, 7, 0, 25, 7, 0, 26, 7, 0, 27, 7, 0, 28, 7, 0, 29, 7, 0, 30, 7, 0, 31, 7, 0, 131071, 7, 0, 65536, 7, 0, 65537, 7, 0, 65538, 7, 0, 65539, 7, 0, 65540, 7, 0, 65541, 7, 0, 65542, 7, 0, 65543, 7, 0, 65544, 7, 0, 65545, 7, 0, 65546, 7, 0, 65547, 7, 0, 65548, 7, 0, 65549, 7, 0, 65550, 7, 0, 65551, 7, 0, 65552, 7, 0, 65557, 7, 0, 65558, 7, 0, 65559, 7, 0, 65560, 7, 0, 65561, 7, 0, 65562, 7, 0, 65563, 7, 0, 65564, 7, 0, 65565, 7, 0, 65566, 7, 0, 65567, 7, 0, 196607, 7, 0, 131072, 7, 0, 131073, 7, 0, 131074, 7, 0, 131075, 7, 0, 131076, 7, 0, 131077, 7, 0, 131078, 7, 0, 131079, 7, 0, 131080, 7, 0, 131081, 7, 0, 131082, 7, 0, 131083, 7, 0, 131084, 7, 0, 131085, 7, 0, 131086, 7, 0, 131087, 7, 0, 131088, 7, 0, 131092, 7, 0, 131093, 7, 0, 131094, 7, 0, 131095, 7, 0, 131096, 7, 0, 131097, 7, 0, 131098, 7, 0, 131099, 7, 0, 131100, 7, 0, 131101, 7, 0, 131102, 7, 0, 131103, 7, 0, 262143, 7, 0, 196608, 7, 0, 196609, 7, 0, 196610, 7, 0, 196611, 7, 0, 196612, 7, 0, 196613, 7, 0, 196614, 7, 0, 196615, 7, 0, 196616, 7, 0, 196617, 7, 0, 196618, 7, 0, 196619, 7, 0, 196620, 7, 0, 196621, 7, 0, 196622, 7, 0, 196623, 7, 0, 196624, 7, 0, 196628, 7, 0, 196629, 7, 0, 196630, 7, 0, 196631, 7, 0, 196632, 7, 0, 196633, 7, 0, 196634, 7, 0, 196635, 7, 0, 196636, 7, 0, 196637, 7, 0, 196638, 7, 0, 196639, 7, 0, 327679, 7, 0, 262144, 7, 0, 262145, 7, 0, 262146, 18, 0, 262147, 13, 0, 262148, 13, 0, 262149, 13, 0, 262150, 13, 0, 262151, 13, 0, 262152, 13, 0, 262153, 13, 0, 262154, 13, 0, 262155, 13, 0, 262156, 13, 0, 262157, 13, 0, 262158, 13, 0, 262159, 13, 0, 262160, 13, 0, 262161, 13, 0, 262162, 13, 0, 262163, 13, 0, 262164, 13, 0, 262165, 13, 0, 262166, 13, 0, 262167, 13, 0, 262168, 13, 0, 262169, 19, 0, 262170, 7, 0, 262171, 7, 0, 262172, 7, 0, 262173, 7, 0, 262174, 7, 0, 262175, 7, 0, 393215, 7, 0, 327680, 7, 0, 327681, 7, 0, 327682, 8, 0, 327705, 25, 0, 327706, 7, 0, 327707, 7, 0, 327708, 7, 0, 327709, 7, 0, 327710, 7, 0, 327711, 7, 0, 458751, 7, 0, 393216, 7, 0, 393217, 7, 0, 393218, 8, 0, 393239, 22, 0, 393240, 28, 0, 393241, 25, 0, 393242, 7, 0, 393243, 7, 0, 393244, 7, 0, 393245, 7, 0, 393246, 7, 0, 393247, 7, 0, 524287, 7, 0, 458752, 7, 0, 458753, 7, 0, 458754, 8, 0, 458755, 15, 0, 458773, 29, 0, 458777, 25, 0, 458778, 7, 0, 458779, 7, 0, 458780, 7, 0, 458781, 7, 0, 458782, 7, 0, 458783, 7, 0, 589823, 7, 0, 524288, 7, 0, 524289, 7, 0, 524290, 24, 0, 524291, 1, 0, 524292, 1, 0, 524293, 1, 0, 524294, 1, 0, 524295, 1, 0, 524296, 1, 0, 524297, 1, 0, 524298, 1, 0, 524299, 1, 0, 524300, 1, 0, 524301, 1, 0, 524302, 1, 0, 524303, 1, 0, 524304, 1, 0, 524305, 1, 0, 524306, 1, 0, 524307, 1, 0, 524308, 1, 0, 524309, 1, 0, 524310, 1, 0, 524311, 1, 0, 524312, 1, 0, 524313, 25, 0, 524314, 7, 0, 524315, 7, 0, 524316, 7, 0, 524317, 7, 0, 524318, 7, 0, 524319, 7, 0, 655359, 7, 0, 589824, 7, 0, 589825, 7, 0, 589838, 7, 0, 589839, 7, 0, 589840, 7, 0, 589846, 7, 0, 589847, 7, 0, 589848, 7, 0, 589849, 7, 0, 589850, 7, 0, 589851, 7, 0, 589852, 7, 0, 589853, 7, 0, 589854, 7, 0, 589855, 7, 0, 655360, 7, 0, 655375, 7, 0, 655376, 7, 0, 655382, 7, 0, 655383, 7, 0, 655384, 7, 0, 655385, 7, 0, 655386, 7, 0, 655387, 7, 0, 655388, 7, 0, 655389, 7, 0, 655390, 7, 0, 655391, 7, 0, 720918, 7, 0, 720919, 7, 0, 720920, 7, 0, 720921, 7, 0, 720922, 7, 0, 720923, 7, 0, 720924, 7, 0, 720925, 7, 0, 720926, 7, 0, 720927, 7, 0, 786454, 7, 0, 786455, 7, 0, 786456, 7, 0, 786457, 7, 0, 786458, 7, 0, 786459, 7, 0, 786460, 7, 0, 786461, 7, 0, 786462, 7, 0, 786463, 7, 0 )

[node name="InDoor" type="Sprite" parent="."]
position = Vector2( 448, 464 )
texture = ExtResource( 33 )

[node name="CanvasModulate" type="CanvasModulate" parent="."]
color = Color( 0.423529, 0.423529, 0.423529, 1 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 512, 320 )
zoom = Vector2( 0.9, 0.9 )

[node name="Bomb" parent="." instance=ExtResource( 66 )]
position = Vector2( 1535, 350 )

[node name="AllText" type="Node" parent="."]

[node name="PressTuto" type="Sprite" parent="AllText"]
position = Vector2( 448, 384 )
scale = Vector2( 0.15, 0.15 )
texture = ExtResource( 63 )

[node name="FindBombTuto" type="Sprite" parent="AllText"]
position = Vector2( 1087, 384 )
scale = Vector2( 0.15, 0.15 )
texture = ExtResource( 64 )

[node name="YouCanJump" type="Sprite" parent="AllText"]
position = Vector2( 768, 384 )
scale = Vector2( 0.15, 0.15 )
texture = ExtResource( 2 )

[node name="DoorBackToHome" parent="." instance=ExtResource( 7 )]
position = Vector2( 1088, 464 )

[node name="Enemy2" parent="." instance=ExtResource( 4 )]
position = Vector2( 724, 478 )

[node name="Enemy" parent="." instance=ExtResource( 3 )]
position = Vector2( 821, 477 )

[node name="beep" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 70 )

[node name="mondie" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -5.0

[node name="bombbeep" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 70 )

[node name="win" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = -5.0

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 444, 483 )

[connection signal="tree_exited" from="Bomb" to="." method="_on_Bomb_tree_exited"]
[connection signal="tree_exited" from="Enemy2" to="." method="_on_Enemy2_tree_exited"]
[connection signal="tree_exited" from="Enemy" to="." method="_on_Enemy_tree_exited"]
